--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,9 +15,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up Node 16.x
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
       - name: build next
-        run: npm build
+        run: next build
