--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,5 +19,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
+      - name: install packages
+        run: npm install
       - name: build next
         run: npm run build
