--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
