--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.10",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "dayjs": "^1.11.6",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
