--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.10.9",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.8.6",
     "dayjs": "^1.11.6",
@@ -18,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "swr": "^1.3.0",
