--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
