--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: e-com-frontend CI/CD work-flow
 
 env:
   SECRET_JWT_KEY: ${{ secrets.E_COM_SECRET_JWT_KEY }}
-  API_BASE_URL : ${{ secrets.API_BASE_URL_E_COM }}
+  NEXT_PUBLIC_API_BASE_URL: ${{ secrets.API_BASE_URL_E_COM }}
 
 on:
   push:
