--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@fontsource/roboto": "^4.5.8",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/jsonwebtoken": "^8.5.9",
     "axios": "^1.1.3",
+    "base64url": "^3.0.1",
     "dayjs": "^1.11.6",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
